--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 SRC = main.cpp
-HEADERS = SnakeGame.h Snake.h Map.h Item.h ItemManager.h GateManager.h Gate.h
+HEADERS = SnakeGame.h Snake.h Map.h Item.h ItemManager.h GateManager.h Gate.h WallManager.h
 TARGET = main
 
 all: $(TARGET)
